<resources>
    <string name="app_name">ACK ST Peter\'s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_name">First Name</string>
    <string name="surname">Surname</string>
    <string name="other_names">Other Names</string>
    <string name="select_gender">Select Gender</string>
    <string name="marital_status">Marital Status</string>
    <string name="number_of_children">Number of Children</string>
    <string name="select_date_of_birth">Select Date of Birth</string>
    <string name="date_picker_icon">date picker icon</string>
    <string name="next">Next</string>
    <string name="are_you_baptized">Are You Baptized</string>
    <string name="are_you_confirmed">Are you Confirmed</string>
    <string name="select_cell_group">Select Cell Group</string>
    <string name="select_service">Select Service</string>
    <string name="profession">Profession</string>
    <string name="occupation">Occupation</string>
    <string name="phone_number">Phone Number</string>
    <string name="save">Save</string>
    <string name="home">Home</string>
    <string name="add_member">Add Member</string>
    <string name="settings">Settings</string>
    <string name="member_registration">Member Registration</string>
    <string name="personal_info">Personal Information</string>
    <string name="church_info">Church Information</string>
    <string name="career_info">Career Information</string>
    <string name="days">Days</string>
    <string name="date_of_birth">Date Of Birth</string>


    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="marital_status">
        <item>Single</item>
        <item>Married</item>
        <item>Divorced</item>
        <item>Widowed</item>
    </string-array>

    <string-array name="yes_no">
        <item>Yes</item>
        <item>No</item>
    </string-array>

    <string-array name="cell_group">
        <item>Mungano</item>
        <item>Blessed Mothers</item>
        <item>Uthiru</item>
        <item>Kinoo</item>
    </string-array>

    <string-array name="service">
        <item>Morning</item>
        <item>English</item>
        <item>Kikuyu</item>
    </string-array>
</resources>